--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #212121;
   --second-color: #757575;
+  --accent-color: #2196f3;
 }
 body {
   font-family: Roboto, sans-serif;
@@ -16,7 +17,7 @@ body {
   text-decoration: none;
 }
 .first-part {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .last-part {
   color: #000000;
@@ -25,11 +26,11 @@ body {
   color: #ffffff;
 }
 
-.site-nav .site-list .site-link {
+.site-link {
   font-style: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   color: var(--primary-color);
 }
 
@@ -37,17 +38,13 @@ body {
   text-decoration: none;
 }
 .link:hover,
-.link:focus {
-  color: #2196f3;
-}
-.tel-link {
-  font-style: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 2%;
-  color: var(--second-color);
-}
+.link:focus,
+.current-link,
 .mail-link {
+  color: var(--accent-color);
+}
+
+.tel-link {
   color: var(--second-color);
 }
 .hero {
@@ -71,7 +68,7 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  background-color: #2196f3;
+  background-color: var(--accent-color);
   color: #ffffff;
 }
 /*button of the portfolio page*/
@@ -88,10 +85,13 @@ body {
 .btn:hover,
 .btn:focus {
   color: #ffffff;
-  background-color: #2196f3;
+  background-color: var(--accent-color);
   cursor: pointer;
 }
-
+.current-btn {
+  color: #ffffff;
+  background-color: var(--accent-color);
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -140,7 +140,8 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
-.team-position {
+.team-position,
+.project-item {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -167,12 +168,4 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-}
-.project-item {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-  color: var(--second-color);
 }
